--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: May You Live in Interesting Designs
 email: interestingdesigns@gmail.com 
 description: >- # this means to ignore newlines until "baseurl:"
-    Person therapy when I encounter questionable design choices.
+    Personal therapy for when I encounter questionable design choices.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.interestingdesigns.net" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  interestingdesigns
